# keepAfloatD

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  config.example.yaml  deny.toml
.github/workflows/: ci.yml  release.yml
LICENSES/: COMMERCIAL.md
deploy/default/: keepafloatd
deploy/systemd/: keepafloatd@.service
docs/: README.md  architecture.md  development.md  operations.md
examples/: node1.yaml  node2.yaml  node3.yaml
scripts/ci/: e2e-dry-run.sh  health-gate.sh
scripts/ci/publish/: version.sh
scripts/ci/test/: clippy.sh  coverage.sh  deb-install.sh  doc.sh  e2e.sh  licenses-before.sh  licenses.sh  source-build.sh  unit.sh
scripts/shared/: buildx-setup.sh  rust-env.sh
src/: bind_policy.rs  cluster_test.rs  config.rs  health.rs  main.rs  submit.rs  vip.rs
src/raft/: mod.rs  network.rs  probe.rs  types.rs
src/raft/store/: apply_tests.rs  log.rs  mod.rs  state.rs  state_machine.rs  vip_logic.rs
tests/e2e/: docker-compose.5node.yml  docker-compose.yml  run.sh
tests/e2e/configs/: a.yaml  a5.yaml  b.yaml  b5.yaml  c.yaml  c5.yaml  d5.yaml  e5.yaml
tests/e2e/fixtures/: Dockerfile
tests/e2e/runner/: Dockerfile
tests/e2e/scenarios/: 01_steady_state.sh  02_kill_holder.sh  03_kill_leader.sh  04_unhealthy_holder.sh  05_network_partition.sh  06_sigint_graceful.sh  07_restart_rejoin.sh  08_full_outage_majority_recovers.sh  09_concurrent_cold_start.sh  10_returning_nodes_join_survivor.sh  11_survivor_rejoin_after_leader_change.sh  12_sticky_vip.sh  13_stale_survivor_rejected_after_reform.sh
tests/e2e/scenarios5/: 12_minimal_movement_rebalance.sh
tests/e2e/scripts/: health.sh  lib.sh  report.sh  run.sh  run5.sh
tests/haproxy-e2e/: docker-compose.yml  entrypoint.sh  haproxy.rs  node.Dockerfile  run.sh
tests/haproxy-e2e/configs/: a.yaml  b.yaml  c.yaml
